--- a/style.css
+++ b/style.css
@@ -234,14 +234,20 @@ img {
     font-size: 30px;
 }
 
-.contacto-tittle {
+.contacto-title {
     text-align: center;
+}
+
+.contacto_container {
+    display: flex;
+    flex-wrap: nowrap;
+   justify-content: space-around;
 }
 
 .contacto_item {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     gap: 1rem;
 }
 
